# icfpc2023_blazinglyfastberries

./: .gitignore  README.md  scoreboard.txt
problems/: download.sh  stats.txt
solutions/: .gitignore  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  (+58 more)
solver/: .gitignore  Cargo.toml  README.md  config.toml  solve-all.sh
solver/src/: config.rs  geometry.rs  lib.rs  logger.rs  main.rs  random_solution.rs  scoring.rs  visualize.rs
solver/src/model/: problem.rs
vis/: Makefile  README.md  gen-makefile.sh  vis_all_solutions.sh  vis_prob.py
