[package]
name = "solver"
version = "0.1.0"
edition = "2021"
default-run = "solver"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.100"
anyhow = "1.0.65"
config = "0.13.2"
clap = { version = "4.3.11", features = ["derive"] }
rand = "0.8.5"
svg = "0.13.1"
memegeom = { git = "https://github.com/Edgeworth/memegeom.git", version = "0.1.0" }
float-ord = "0.3.2"
