[package]
name = "solver"
version = "0.1.0"
edition = "2021"
default-run = "solver"

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.3.11", features = ["derive"] }
config = "0.13.2"
log = "0.4"
memegeom = { git = "https://github.com/Edgeworth/memegeom.git", version = "0.1.0" }
structopt = "0.3.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.100"
rand = "0.8.5"
svg = "0.13.1"
float-ord = "0.3.2"
